2004-08-28  Yoichi NAKAYAMA  <yoichi@geiin.org>

	* pgg-pgp5.el (pgg-scheme-verify-region): `let*' -> `let'.
	* pgg-pgp.el (pgg-scheme-verify-region): Ditto.
	* mime-edit.el (mime-edit-split-and-send): Ditto.
	* mime-play.el (mime-store-message/partial-piece): Ditto.

2004-08-03  Yoichi NAKAYAMA  <yoichi@geiin.org>

	* mime-edit.el (mime-edit-mime-version-field-for-message/partial):
	Fix usage of mime-encode-field-body.

2004-07-24  Yoichi NAKAYAMA  <yoichi@geiin.org>

	* mime-view.el (mime-display-multipart/related): Do nothing when
	the part is not found.

2004-04-18  TAKAHASHI Kaoru  <kaoru@kaisei.org>

	* mime-edit.el (mime-file-types): Add application/pdf. Use base64
	for application/postscript.
	(mime-content-types): Add application/pdf.

2004-04-04  Yoichi NAKAYAMA  <yoichi@geiin.org>

	* mime-edit.el (mime-file-types): Add application/vnd.ms-excel.
	(mime-content-types): Add application/vnd.ms-excel and
	application/msword.

2004-02-12  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>

	* mime-image.el (mime-display-image): Ignore errors about image
	decoding.

2004-02-06  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mime-image.el (mime-image-normalize-xbm-buffer): Add missing
	format specifiers.

	* mime-view.el (mime-view-insert-entity-button): Fix misplaced let
	form.

2004-01-15  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mime-edit.el (mime-edit-normalize-body): Fix a comment that the
	problem related to `replace-match' has been fixed at 2004-01-15,
	thanks to Handa-san.


2003-12-24  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>

	* SEMI: Version 1.14.6 (Maruoka) released.

2003-12-18  Daiki Ueno  <ueno@unixuser.org>

	* pgg-gpg.el (pgg-gpg-process-region): Set environment variable
	LANGUAGE as well.  GNU gettext gives precedence to LANGUAGE over
	LC_ALL, when different language code is specified.  Thanks to
	Tatsuya Kinoshita <tats@vega.ocn.ne.jp>.
	[cf. <emacs-mime-ja:1599>]

2003-12-17  Daiki Ueno  <ueno@unixuser.org>
